[metadata]
name = namespacedict
version = attr: namespacedict.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
description = dictionary with fully evaluated keys
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/namespacedict
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules = namespacedict

[options.extras_require]
test =
    pytest
